[tool.poetry]
name = "fast-track-test"
version = "0.1.0"
description = "A Random Forrest Classifier for EMG Data - Fast Track Test"
authors = ["Sharpz7 <adam.mcarthur62@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
