[tool.poetry]
name = "fasttrackml-test"
version = "0.1.0"
description = "Python Example for FastTrackML"
authors = ["Sharpz7 <adam.mcarthur62@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mlflow-skinny = "^2.6.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
